mysys/my_copy.c
@@ -87,6 +87,13 @@ int my_copy(const char *from, const char *to, myf MyFlags)
 	    my_write(to_file,buff,Count,MYF(MyFlags | MY_NABP)))
 	goto err;
 
+    /* sync the destination file */
+    if (MyFlags & MY_SYNC)
+    {
+      if (my_sync(to_file, MyFlags))
+        goto err;
+    }
+
     if (my_close(from_file,MyFlags) | my_close(to_file,MyFlags))
       DBUG_RETURN(-1);				/* Error on close */
 
